<resources>
    <string name="app_name">MyPlace</string>
    <string name="login_tv">Login</string>
    <string name="register_tv">Register</string>
    <string name="describeImgLogo">My Place Logo</string>
    <string name="reg_creatAcc">Create an account</string>
    <string name="reg_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome0">Welcome to MyPlace</string>
    <string name="repeatPass">Repeat password</string>
    <string name="reg_RegisterBtn">Register</string>
    <string name="prompt_login">Login</string>
    <string name="login_subtitle">Connect with your email to start decorating!</string>
    <string name="login_title">Sign in</string>
    <string name="registration_success">Your account has been successfully created!</string>
    <string name="registration_failure">Something went wrong while registering your account. Try again</string>
    <string name="emptyPassword">Password field cannot be empty</string>
    <string name="emptyEmail">Email field cannot be empty</string>
    <string name="main_menu">Main Menu</string>
    <string name="Decorate">Decorate</string>
    <string name="Catalogue">Catalogue</string>
    <string name="Logout">Logout</string>
    <string name="OthersCrations">Others\' creations</string>
    <string name="Subscriptions">Subscriptions</string>
    <string name="empty_username">Username field can not be empty.</string>
    <string name="empty_email">Email field can not be empty.</string>
    <string name="empty_password">Password field can not be empty.</string>
    <string name="empty_rep_password">Repeat password field can not be empty.</string>
    <string name="username_format">Username can contain only: upper and lower case letters, numbers and _ .</string>
    <string name="username_2short">Username too short. Min length: 4.</string>
    <string name="username_2long">Username too long. Max length: 20.</string>
    <string name="username_alrd_exists">Username already exists.</string>
    <string name="inv_email_format">Invalid email format.</string>
    <string name="inv_password_format"><![CDATA[Password should contain: lower & upper case letters, digits and at least one special character.]]></string>
    <string name="password_2short">Password too short. Min length: 6.</string>
    <string name="password_2long">Password too long. Max length: 30.</string>
    <string name="creating_acc">Creating account...</string>
    <string name="pass_dont_match">Password and repeat password don\'t match.</string>
    <string name="save_screenshot">Save</string>
    <string name="remove_object">Remove</string>
    <string name="permission_AR_granted">Permission granted!"</string>
    <string name="permission_AR_notGranted">Permission not granted!"</string>
    <string name="error_general_message">Error!</string>
    <string name="image_uploaded_success">Image uploaded!</string>
    <string name="image_not_uploaded">Image not uploaded!</string>
    <string name="text_publish_image">Publish this image</string>
    <string name="text_delete_image">Delete this image</string>
    <string name="hint_image_title">Title</string>
    <string name="hint_image_description">Description</string>
    <string name="button_publish">Publish</string>
    <string name="button_delete">Delete</string>
    <string name="success_image_published">Your image was successfully published</string>
    <string name="failed_image_publish">Something went wrong while publishing you image</string>
    <string name="str_post">POST</string>

</resources>
