<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingTop="40dp"
    android:paddingRight="25dp"
    android:paddingBottom="40dp"
    tools:context=".ManageImagineActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_weight="0.4"
        android:background="@color/colorViolet1"
        android:orientation="vertical"
        android:padding="12dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_publish_image"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ET_image_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="68dp"
            android:hint="@string/hint_image_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ET_image_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:hint="@string/hint_image_description"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            android:onClick="publishImage"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/button_publish"
            android:textColor="@color/colorCream"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_weight="0.8"
        android:background="@color/colorViolet1"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_delete_image"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            android:onClick="deleteImage"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/button_delete"
            android:textColor="@color/colorCream"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>