<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_my_place"
        android:clipToPadding="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:contentDescription="@string/describeImgLogo"
            android:src="@drawable/logo_my_place" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingVertical="5dp"
            android:text="@string/login_tv"
            android:textAlignment="center"
            android:textColor="@color/colorViolet1"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingVertical="5dp"
            android:text="@string/register_tv"
            android:textAlignment="center"
            android:textColor="@color/colorViolet1"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>